sorted weird mapbox y coordinate flipping...

--- a/views/index.haml
+++ b/views/index.haml
@@ -3,7 +3,6 @@
 
 .test{:id => 'map'}
 
-
 :javascript
   var po = org.polymaps;
 
@@ -13,10 +12,9 @@
     .zoom(6)
     .add(po.interact())
     .add(po.hash());
-
+  
   map.add(po.image()
-    .url(po.url("/{Z}/{Y}/{X}")
-    .hosts(["a.", "b.", "c.", ""])));
+       .url(po.url("/tiles/{Z}/{X}/{Y}")));
 
   map.add(po.compass()
     .pan("none"));
